--- a/main/templates/main/search_result.html
+++ b/main/templates/main/search_result.html
@@ -11,7 +11,6 @@
             background-color: rgba(240, 248, 255, 0.55);
             box-shadow: rgba(255, 0, 0, 0.32) 0 3px 90px 10px;
         }
-
         .main-card:hover {
             transform: translateY(-4px);
             background-color: rgba(227, 231, 250, 0.92);
@@ -39,7 +38,6 @@
             transition: 0.5s;
             border-radius: 6px;
         }
-
         li:hover {
             border-bottom: none;
             background-color: rgba(227, 231, 250, 0.96);
@@ -61,23 +59,23 @@
             margin-top: -5px;
             transition: 0.5s;
             border-radius: 8px;
-            background-color: rgba(23, 1, 1, 0.15);
+            background-color: rgba(135, 6, 6, 0.15);
         }
         .success_alert {
             color: rgb(21, 53, 1);
             border: #129203 2px solid;
         }
         .success_alert:hover {
-            color: #cbfac5;
-            background-color: rgb(27, 67, 3);
+            color: #d9f6d5;
+            background-color: #129203;
         }
         .fail-alert {
             color: rgb(100, 3, 3);
             border: #c80404 2px solid;
         }
         .fail-alert:hover {
-            color: #fdc5c5;
-            background-color: rgb(62, 3, 3);
+            color: #f8dddd;
+            background-color: #c80404;
         }
         .closebtn {
             color: white;
