--- a/main/templates/main/add_result.html
+++ b/main/templates/main/add_result.html
@@ -59,23 +59,23 @@
             margin-top: -5px;
             transition: 0.5s;
             border-radius: 8px;
-            background-color: rgba(23, 1, 1, 0.15);
+            background-color: rgba(135, 6, 6, 0.15);
         }
         .success_alert {
             color: rgb(21, 53, 1);
             border: #129203 2px solid;
         }
         .success_alert:hover {
-            color: #cbfac5;
-            background-color: rgb(27, 67, 3);
+            color: #d9f6d5;
+            background-color: #129203;
         }
         .fail-alert {
             color: rgb(100, 3, 3);
             border: #c80404 2px solid;
         }
         .fail-alert:hover {
-            color: #fdc5c5;
-            background-color: rgb(62, 3, 3);
+            color: #f8dddd;
+            background-color: #c80404;
         }
         .closebtn {
             color: white;
