--- a/main/templates/main/add_result.html
+++ b/main/templates/main/add_result.html
@@ -193,7 +193,7 @@ Dictionary Online</pre>
                                 <div class="card-body fs-6 py-0">
                                     <div class="success_alert alert">
                                         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                                        '{{ word }}' added to trie successfully!
+                                        < {{ word }} > added to trie successfully!
                                     </div>
                                 </div>
                             </div>
@@ -202,7 +202,7 @@ Dictionary Online</pre>
                                 <div class="card-body fs-6 py-0">
                                     <div class="fail-alert alert">
                                         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                                        '{{ word }}' already exists.
+                                        < {{ word }} > already exists.
                                     </div>
                                 </div>
                             </div>
