make sure suggestion is not None

--- a/main/templates/main/search_result.html
+++ b/main/templates/main/search_result.html
@@ -188,7 +188,7 @@ Dictionary Online</pre>
                                         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
                                         Unfortunately, < {{ word }} > not found.
                                         {% if suggestions %}
-                                            <p class="mb-0">suggestions:
+                                            <p class="mb-0">Did you mean:
                                             {% for suggustion in suggestions %}
                                                 {{ suggustion }},
                                             {% endfor %}
