some inout tab  changes

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -39,15 +39,19 @@
             transition: 0.5s;
             border-radius: 6px;
         }
-
         li:hover {
             border-bottom: none;
             background-color: rgba(227, 231, 250, 0.96);
             box-shadow: inset rgba(10, 10, 10, 0.25) 4px 6px 3px;
         }
 
+        .form-control {
+            background-color: rgba(0,0,0,0);
+        }
         .form-control:focus {
-            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.0) inset, 0px 0px 8px rgba(255, 100, 255, 0.0);
+            border: none;
+            background-color: rgb(227, 231, 250);
+            box-shadow: inset rgba(10, 10, 10, 0.25) 4px 6px 3px;
         }
 
     </style>
@@ -121,11 +125,11 @@ Dictionary Online</pre>
                             <div class="row mb-4">
                                 <div class="col-10">
                                     <input class="form-control"
-                                           style="background-color: rgba(0,0,0,0); border-color: #303030" type="text"
+                                           style="border-color: #303030" type="text"
                                             {% if word %}
                                            value="{{ word }}"
                                             {% endif %}
-                                           placeholder="some thing like word ...." name="word" required>
+                                           placeholder="Enter something to search ...." name="word" required>
                                 </div>
                                 <div class="col-2">
                                     <button type="submit" class="btn btn-outline-dark">Search</button>
@@ -139,8 +143,8 @@ Dictionary Online</pre>
                             <div class="row mb-4">
                                 <div class="col-10">
                                     <input class="form-control"
-                                           style="background-color: rgba(0,0,0,0); border-color: #303030" type="text"
-                                           placeholder="some thing like word ...." name="word" required>
+                                           style="border-color: #303030" type="text"
+                                           placeholder="Enter something to add ..." name="word" required>
                                 </div>
                                 <div class="col-2">
                                     <button type="submit" class="btn btn-outline-dark">Add</button>
