--- a/main/templates/main/add_result.html
+++ b/main/templates/main/add_result.html
@@ -217,8 +217,8 @@ Dictionary Online</pre>
                         <audio controls autoplay loop style="margin-left: 160px;">
                             <source src="{% static 'audio/music1.mp3' %}" type="audio/mpeg">
                         </audio>
-                        <p style="margin-top: 5px; font-weight: bold; text-align: center; color: rgba(0,0,0,0.7);"> if
-                            didn't start, click to play...</p>
+                        <p style="margin-top: 5px; font-weight: bold; text-align: center; color: rgba(0,0,0,0.7);">
+                            if didn't start, click to play...</p>
                     </div>
                 </div>
             </div>
