show word of suggestion in template

--- a/main/templates/main/search_result.html
+++ b/main/templates/main/search_result.html
@@ -196,7 +196,7 @@ Dictionary Online</pre>
                                         {% if suggestions %}
                                             <p class="mb-0">Suggestions:
                                             {% for suggustion in suggestions %}
-                                                {{ suggustion }},
+                                                {{ suggustion.word }},
                                             {% endfor %}
                                             ...
                                             </p>
