--- a/main/templates/main/search_result.html
+++ b/main/templates/main/search_result.html
@@ -183,7 +183,7 @@ Dictionary Online</pre>
                                 <div class="card-body fs-6 py-0">
                                     <div class="success_alert alert">
                                         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                                        Yes! < {{ word }} > found!
+                                        Yes! ' {{ word }} ' found!
                                     </div>
                                 </div>
                             </div>
@@ -192,9 +192,9 @@ Dictionary Online</pre>
                                 <div class="card-body fs-6 py-0">
                                     <div class="fail-alert alert">
                                         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                                        Unfortunately, < {{ word }} > not found.
+                                        Unfortunately, ' {{ word }} ' not found.
                                         {% if suggestions %}
-                                            <p class="mb-0">Suggestions:
+                                            <p class="mb-0">Top suggestions:
                                             {% for suggustion in suggestions %}
                                                 {{ suggustion.word }},
                                             {% endfor %}
