--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,7 +11,6 @@
             background-color: rgba(240, 248, 255, 0.55);
             box-shadow: rgba(255, 0, 0, 0.32) 0 3px 90px 10px;
         }
-
         .main-card:hover {
             transform: translateY(-4px);
             background-color: rgba(227, 231, 250, 0.92);
@@ -52,6 +51,55 @@
             border: none;
             background-color: rgb(227, 231, 250);
             box-shadow: inset rgba(10, 10, 10, 0.25) 4px 6px 3px;
+        }
+
+        .Developers {
+            font-size: 47px;
+            margin-top: 110px;
+            text-align: center;
+            animation: devs_names 6s 1 linear forwards;
+        }
+        @keyframes devs_names {
+            0% {
+                color: rgba(235, 239, 238, 0.2);
+                text-shadow: rgba(10, 10, 10, 0.5) 10px 10px 8px;
+            }
+            10% {
+                color: rgba(235, 239, 238, 0.7);
+                text-shadow: rgba(10, 10, 10, 0.7) 8px 8px 8px;
+            }
+            20% {
+                color: rgba(235, 239, 238, 0.8);
+                text-shadow: rgba(10, 10, 10, 0.8) 8px 8px 7px;
+            }
+            40% {
+                color: rgba(233, 207, 241, 0.9);
+                text-shadow: rgba(86, 6, 6, 0.9) 5px 5px 6px;
+            }
+            50% {
+                color: rgb(255, 255, 255);
+                text-shadow: rgba(123, 6, 6) 0 0 8px
+            }
+            60% {
+                color: rgba(217, 207, 241, 0.9);
+                text-shadow: rgba(86, 6, 6, 0.9) -5px 5px 6px;
+            }
+            80% {
+                color: rgba(235, 239, 238, 0.8);
+                text-shadow: rgba(10, 10, 10, 0.8) -8px 8px 7px;
+            }
+            90% {
+                color: rgba(235, 239, 238, 0.7);
+                text-shadow: rgba(10, 10, 10, 0.7) -8px 8px 8px;
+            }
+            95% {
+                color: rgba(235, 239, 238, 0.2);
+                text-shadow: rgba(10, 10, 10, 0.5) -10px 10px 8px;
+            }
+            100% {
+                color: rgba(235, 239, 238, 0);
+                text-shadow: rgba(253, 253, 253, 0) 0 0 2px;
+            }
         }
 
     </style>
@@ -162,5 +210,8 @@ Dictionary Online</pre>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="Developers">
+        Welcome to the Trie Dictionary online
     </div>
 {% endblock %}
