--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -57,7 +57,7 @@
             font-size: 47px;
             margin-top: 110px;
             text-align: center;
-            animation: devs_names 6s 1 linear forwards;
+            animation: devs_names 5s 1s 1 linear forwards;
         }
         @keyframes devs_names {
             0% {
@@ -201,11 +201,11 @@ Dictionary Online</pre>
                         </form>
                     </div>
                     <div class="collapse multi-collapse mt-3" id="MusicBox" data-bs-parent="#NavGroup">
-                        <audio controls autoplay loop style="margin-left: 160px;">
+                        <audio controls loop style="margin-left: 160px;">
                             <source src="{% static 'audio/music1.mp3' %}" type="audio/mpeg">
                         </audio>
                         <p style="margin-top: 5px; font-weight: bold; text-align: center; color: rgba(0,0,0,0.7);">
-                            if didn't start, click to play...</p>
+                            Click the start button to play...</p>
                     </div>
                 </div>
             </div>
