--- a/main/templates/main/add_result.html
+++ b/main/templates/main/add_result.html
@@ -214,11 +214,11 @@ Dictionary Online</pre>
                         {% endif %}
                     </div>
                     <div class="collapse multi-collapse mt-3" id="MusicBox" data-bs-parent="#NavGroup">
-                        <audio controls autoplay loop style="margin-left: 160px;">
+                        <audio controls loop style="margin-left: 160px;">
                             <source src="{% static 'audio/music1.mp3' %}" type="audio/mpeg">
                         </audio>
                         <p style="margin-top: 5px; font-weight: bold; text-align: center; color: rgba(0,0,0,0.7);">
-                            if didn't start, click to play...</p>
+                            Click start button to play...</p>
                     </div>
                 </div>
             </div>
