--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,7 +11,7 @@
             background-color: rgba(240, 248, 255, 0.55);
             box-shadow: rgba(255, 0, 0, 0.32) 0 3px 90px 10px;
         }
-        .main-card:hover {
+        .main-card:hover  {
             transform: translateY(-4px);
             background-color: rgba(227, 231, 250, 0.92);
             box-shadow: rgba(97, 3, 3, 0.6) 0 10px 45px 10px;
@@ -72,11 +72,11 @@
                 text-shadow: rgba(255, 255, 255, 0.1) 1px 2px 1px;
             }
             10% {
-                color: rgba(235, 239, 238, 0.4);
+                color: rgba(235, 239, 238, 0.5);
                 text-shadow: rgba(255, 255, 255, 0.2) 1px 2px 3px;
             }
             20% {
-                color: rgba(235, 239, 238, 0.6);
+                color: rgba(235, 239, 238, 0.7);
                 text-shadow: rgba(255, 243, 243, 0.3) 1px 2px 5px;
             }
             40% {
@@ -96,12 +96,14 @@
                 text-shadow: rgba(255, 122, 122, 0.7) 1px 2px 13px;
             }
             90% {
-                color: rgba(235, 239, 238);
+                color: rgb(248, 226, 226);
                 text-shadow: rgba(255, 54, 54, 0.8) 1px 2px 15px;
+                filter: drop-shadow(0 5px 5px rgba(10, 10, 10, 0.9));
             }
             95% {
-                color: rgba(235, 239, 238);
+                color: rgb(255, 9, 9);
                 text-shadow: rgba(255, 0, 0, 0.9) 1px 2px 17px;
+                filter: drop-shadow(0 5px 5px rgba(104, 3, 3, 0.9));
             }
             100% {
                 color: rgba(235, 239, 238, 0);
